[package]
name = "xitca-postgres-diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.5", features = ["pool"] }
xitca-postgres = { version = "0.1", features = ["compat"] }

async-trait = "0.1.82"
futures-util = "0.3.30"
scoped-futures = "0.1.3"
tokio = "1.40.0"

[patch.crates-io]
diesel-async = { path = "../diesel_async" }
xitca-postgres = { path = "../xitca-web/postgres" }
