[package]
name = "xitca-postgres-diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.5", features = ["pool"] }
xitca-postgres = { version = "0.1", features = ["compat"] }

futures-core = { version = "0.3", default-features = false }
scoped-futures = "0.1.3"
tokio = { version = "1.40.0", features = ["sync"] }

[patch.crates-io]
diesel-async = { path = "../diesel_async" }
xitca-postgres = { path = "../xitca-web/postgres" }
