[package]
name = "xitca-postgres-diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.5", features = ["pool"] }
xitca-postgres = { version = "0.2.1", features = ["compat"] }

futures-core = { version = "0.3", default-features = false }
scoped-futures = "0.1.3"
tokio = { version = "1.40.0", features = ["sync"] }

[dev-dependencies]
diesel-async = { version = "0.5", features = ["bb8", "postgres"] }
futures-util = "0.3"
tokio = { version = "1.40.0", features = ["macros", "rt"] }

[patch.crates-io]
diesel-async = { git = "https://github.com/weiznich/diesel_async", rev = "5b8262b" }
